2005-01-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* lib/zip_name_locate.c (_zip_name_locate): fix ZIP_FL_NODIR;
	also follow appnote.txt and only accept forward slashes as
	directory separators.

2005-01-11  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_fopen_index.c (zip_fopen_index), lib/zip_fread.c
	(zip_fread), lib/zip_fclose.c (zip_fclose): fix CRC checking for
	stored files.
	
	* lib/zip_new.c (_zip_new): init error.

	* lib/zip_error.c (_zip_error_get): set system error to 0 for
	ZIP_ET_NONE.

	* lib/zip_open.c (_zip_memdup): make static, use size_t for size
	argument, add error argument for passing error code back to
	caller.
	* lib/zip_open.c (_zip_readcdir): error out if _zip_memdup
	failes.
	
2004-12-28  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_free.c (_zip_free): correctly set error of open
	files to ZIP_ER_ZIPCLOSED.

2004-12-22  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip.h: rename zip_read_func to zip_source_callback, struct
	zip_cmd to struct zip_source_cmd, and ZIP_CMD_* to ZIP_SOURCE_*;
	adapt users.
	
	* lib/zip_open.c (_zip_checkcons): always initialize variables

2004-12-22  Thomas Klausner <wiz@danbala.tuwien.ac.at>

	* zip.h: Rename zip_error_sys_type to zip_error_get_sys_type.
	Adapt callers and documentation.

2004-11-30  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_get_name.c (zip_get_name): add flags argument.
	(_zip_get_name): new function.
	* lib/zip_uncange.c (zip_unchange): return error if unchanging
	name would result in duplicate name in archive.
	
	* lib/zip_name_locate.c (_zip_name_locate): new function.
	(zip_name_locate): move actual name lookup to _zip_name_locate.
	* lib/zip_set_name.c (_zip_set_name): don't allow duplicate names
	in archive; return error if name is NULL.
	* lib/zip_replace.c (_zip_replace): don't call _zip_set_name when
	name is NULL.
	* lib/zip_get_name.c (zip_get_name): fix when called with
	partially initialized entry.
	